--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ version = "0.0.1"
 requires-python = "==3.13.5"
 dependencies = [
     "flask=3.1.2",
-    "sqlmodel=0.0.27"
+    "sqlmodel=0.0.27",
+    "icecream=2.1.8"
 ]
