--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "password_wallet"
-version = "0.0.1"
+dynamic = ["version"]
 
 requires-python = "==3.13.5"
+
 dependencies = [
-    "flask=3.1.2",
-    "sqlmodel=0.0.27",
-    "icecream=2.1.8"
+    "flask==3.1.2",
+    "sqlmodel==0.0.27",
+    "icecream==2.1.8"
 ]
