--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "password_wallet"
 dynamic = ["version"]
 
-requires-python = "==3.13.5"
+requires-python = ">=3.12.4"
 
 dependencies = [
     "flask==3.1.2",
