Refactor imports and update configuration settings in multiple files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,23 @@
 requires = ["setuptools >= 77.0.3"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+include-package-data = false
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["password_wallet.*"]
+exclude = ["test", "test*", "*test*", "tests", "tests*", "*tests*"]
+namespaces = false
+
+[tool.setuptools.package-data]
+exclude = ["test", "test*", "*test*", "tests", "tests*", "*tests*"]
+
 [project]
 name = "password_wallet"
 version = "0.1.0"
 
 requires-python = ">=3.12.4"
-
 dependencies = [
     "flask==3.1.2",
     "sqlmodel==0.0.27",
@@ -18,10 +29,4 @@ authors = [
 ]
 
 readme = {file = "README.md", content-type = "text/markdown"}
-
-[tool.setuptools.packages.find]
-exclude = ["tests*", "instance*"]
-
-[tool.setuptools.package-data]
-exclude = ["tests*", "instance*"]
 
