--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ requires-python = ">=3.12.4"
 dependencies = [
     "flask==3.1.2",
     "sqlmodel==0.0.27",
-    "icecream==2.1.8"
+    "click==8.1.3",
+    "icecream==2.1.8",
 ]
 authors = [
     { name = "Seweryn Swiech", email = "sswiech.ti221@zsp1piotrkow.edu.pl"}
